@@ -62,21 +62,6 @@ module Raylib
   OPENGL_33 = 3
   OPENGL_43 = 4
   OPENGL_ES_20 = 5
-  OPENGL_11 = 1
-  OPENGL_21 = 2
-  OPENGL_33 = 3
-  OPENGL_43 = 4
-  OPENGL_ES_20 = 5
-  RL_ATTACHMENT_COLOR_CHANNEL0 = 0
-  RL_ATTACHMENT_COLOR_CHANNEL1 = 1
-  RL_ATTACHMENT_COLOR_CHANNEL2 = 2
-  RL_ATTACHMENT_COLOR_CHANNEL3 = 3
-  RL_ATTACHMENT_COLOR_CHANNEL4 = 4
-  RL_ATTACHMENT_COLOR_CHANNEL5 = 5
-  RL_ATTACHMENT_COLOR_CHANNEL6 = 6
-  RL_ATTACHMENT_COLOR_CHANNEL7 = 7
-  RL_ATTACHMENT_DEPTH = 100
-  RL_ATTACHMENT_STENCIL = 200
   RL_ATTACHMENT_COLOR_CHANNEL0 = 0
   RL_ATTACHMENT_COLOR_CHANNEL1 = 1
   RL_ATTACHMENT_COLOR_CHANNEL2 = 2
@@ -95,22 +80,6 @@ module Raylib
   RL_ATTACHMENT_CUBEMAP_NEGATIVE_Z = 5
   RL_ATTACHMENT_TEXTURE2D = 100
   RL_ATTACHMENT_RENDERBUFFER = 200
-  RL_ATTACHMENT_CUBEMAP_POSITIVE_X = 0
-  RL_ATTACHMENT_CUBEMAP_NEGATIVE_X = 1
-  RL_ATTACHMENT_CUBEMAP_POSITIVE_Y = 2
-  RL_ATTACHMENT_CUBEMAP_NEGATIVE_Y = 3
-  RL_ATTACHMENT_CUBEMAP_POSITIVE_Z = 4
-  RL_ATTACHMENT_CUBEMAP_NEGATIVE_Z = 5
-  RL_ATTACHMENT_TEXTURE2D = 100
-  RL_ATTACHMENT_RENDERBUFFER = 200
-  RL_LOG_ALL = 0
-  RL_LOG_TRACE = 1
-  RL_LOG_DEBUG = 2
-  RL_LOG_INFO = 3
-  RL_LOG_WARNING = 4
-  RL_LOG_ERROR = 5
-  RL_LOG_FATAL = 6
-  RL_LOG_NONE = 7
   RL_LOG_ALL = 0
   RL_LOG_TRACE = 1
   RL_LOG_DEBUG = 2
@@ -140,33 +109,6 @@ module Raylib
   RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA = 19
   RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA = 20
   RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA = 21
-  RL_PIXELFORMAT_UNCOMPRESSED_GRAYSCALE = 1
-  RL_PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA = 2
-  RL_PIXELFORMAT_UNCOMPRESSED_R5G6B5 = 3
-  RL_PIXELFORMAT_UNCOMPRESSED_R8G8B8 = 4
-  RL_PIXELFORMAT_UNCOMPRESSED_R5G5B5A1 = 5
-  RL_PIXELFORMAT_UNCOMPRESSED_R4G4B4A4 = 6
-  RL_PIXELFORMAT_UNCOMPRESSED_R8G8B8A8 = 7
-  RL_PIXELFORMAT_UNCOMPRESSED_R32 = 8
-  RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32 = 9
-  RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32A32 = 10
-  RL_PIXELFORMAT_COMPRESSED_DXT1_RGB = 11
-  RL_PIXELFORMAT_COMPRESSED_DXT1_RGBA = 12
-  RL_PIXELFORMAT_COMPRESSED_DXT3_RGBA = 13
-  RL_PIXELFORMAT_COMPRESSED_DXT5_RGBA = 14
-  RL_PIXELFORMAT_COMPRESSED_ETC1_RGB = 15
-  RL_PIXELFORMAT_COMPRESSED_ETC2_RGB = 16
-  RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA = 17
-  RL_PIXELFORMAT_COMPRESSED_PVRT_RGB = 18
-  RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA = 19
-  RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA = 20
-  RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA = 21
-  RL_TEXTURE_FILTER_POINT = 0
-  RL_TEXTURE_FILTER_BILINEAR = 1
-  RL_TEXTURE_FILTER_TRILINEAR = 2
-  RL_TEXTURE_FILTER_ANISOTROPIC_4X = 3
-  RL_TEXTURE_FILTER_ANISOTROPIC_8X = 4
-  RL_TEXTURE_FILTER_ANISOTROPIC_16X = 5
   RL_TEXTURE_FILTER_POINT = 0
   RL_TEXTURE_FILTER_BILINEAR = 1
   RL_TEXTURE_FILTER_TRILINEAR = 2
@@ -179,38 +121,6 @@ module Raylib
   RL_BLEND_ADD_COLORS = 3
   RL_BLEND_SUBTRACT_COLORS = 4
   RL_BLEND_CUSTOM = 5
-  RL_BLEND_ALPHA = 0
-  RL_BLEND_ADDITIVE = 1
-  RL_BLEND_MULTIPLIED = 2
-  RL_BLEND_ADD_COLORS = 3
-  RL_BLEND_SUBTRACT_COLORS = 4
-  RL_BLEND_CUSTOM = 5
-  RL_SHADER_LOC_VERTEX_POSITION = 0
-  RL_SHADER_LOC_VERTEX_TEXCOORD01 = 1
-  RL_SHADER_LOC_VERTEX_TEXCOORD02 = 2
-  RL_SHADER_LOC_VERTEX_NORMAL = 3
-  RL_SHADER_LOC_VERTEX_TANGENT = 4
-  RL_SHADER_LOC_VERTEX_COLOR = 5
-  RL_SHADER_LOC_MATRIX_MVP = 6
-  RL_SHADER_LOC_MATRIX_VIEW = 7
-  RL_SHADER_LOC_MATRIX_PROJECTION = 8
-  RL_SHADER_LOC_MATRIX_MODEL = 9
-  RL_SHADER_LOC_MATRIX_NORMAL = 10
-  RL_SHADER_LOC_VECTOR_VIEW = 11
-  RL_SHADER_LOC_COLOR_DIFFUSE = 12
-  RL_SHADER_LOC_COLOR_SPECULAR = 13
-  RL_SHADER_LOC_COLOR_AMBIENT = 14
-  RL_SHADER_LOC_MAP_ALBEDO = 15
-  RL_SHADER_LOC_MAP_METALNESS = 16
-  RL_SHADER_LOC_MAP_NORMAL = 17
-  RL_SHADER_LOC_MAP_ROUGHNESS = 18
-  RL_SHADER_LOC_MAP_OCCLUSION = 19
-  RL_SHADER_LOC_MAP_EMISSION = 20
-  RL_SHADER_LOC_MAP_HEIGHT = 21
-  RL_SHADER_LOC_MAP_CUBEMAP = 22
-  RL_SHADER_LOC_MAP_IRRADIANCE = 23
-  RL_SHADER_LOC_MAP_PREFILTER = 24
-  RL_SHADER_LOC_MAP_BRDF = 25
   RL_SHADER_LOC_VERTEX_POSITION = 0
   RL_SHADER_LOC_VERTEX_TEXCOORD01 = 1
   RL_SHADER_LOC_VERTEX_TEXCOORD02 = 2
@@ -246,19 +156,6 @@ module Raylib
   RL_SHADER_UNIFORM_IVEC3 = 6
   RL_SHADER_UNIFORM_IVEC4 = 7
   RL_SHADER_UNIFORM_SAMPLER2D = 8
-  RL_SHADER_UNIFORM_FLOAT = 0
-  RL_SHADER_UNIFORM_VEC2 = 1
-  RL_SHADER_UNIFORM_VEC3 = 2
-  RL_SHADER_UNIFORM_VEC4 = 3
-  RL_SHADER_UNIFORM_INT = 4
-  RL_SHADER_UNIFORM_IVEC2 = 5
-  RL_SHADER_UNIFORM_IVEC3 = 6
-  RL_SHADER_UNIFORM_IVEC4 = 7
-  RL_SHADER_UNIFORM_SAMPLER2D = 8
-  RL_SHADER_ATTRIB_FLOAT = 0
-  RL_SHADER_ATTRIB_VEC2 = 1
-  RL_SHADER_ATTRIB_VEC3 = 2
-  RL_SHADER_ATTRIB_VEC4 = 3
   RL_SHADER_ATTRIB_FLOAT = 0
   RL_SHADER_ATTRIB_VEC2 = 1
   RL_SHADER_ATTRIB_VEC3 = 2
@@ -522,7 +419,7 @@ module Raylib
       :rlGetShaderIdDefault => [],
       :rlGetShaderLocsDefault => [],
       :rlLoadRenderBatch => [:int, :int],
-      :rlUnloadRenderBatch => [rlRenderBatch.by_value],
+      :rlUnloadRenderBatch => [RlRenderBatch.by_value],
       :rlDrawRenderBatch => [:pointer],
       :rlSetRenderBatchActive => [:pointer],
       :rlDrawRenderBatchActive => [],
@@ -652,7 +549,7 @@ module Raylib
       :rlGetTextureIdDefault => :uint,
       :rlGetShaderIdDefault => :uint,
       :rlGetShaderLocsDefault => :pointer,
-      :rlLoadRenderBatch => rlRenderBatch.by_value,
+      :rlLoadRenderBatch => RlRenderBatch.by_value,
       :rlUnloadRenderBatch => :void,
       :rlDrawRenderBatch => :void,
       :rlSetRenderBatchActive => :void,
